aligned text, changed font, added icons, fix full circle when break, and color

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,5 @@
 // app global css in SCSS form
+@font-face {
+	font-family: Interstate;
+	src: url(./fonts/InterstateRegular.otf);
+}
